--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
+    "classnames": "^2.2.3",
     "css-loader": "^0.23.1",
     "html-webpack-plugin": "^1.7.0",
     "node-sass": "^3.4.2",
